--- a/purple.css
+++ b/purple.css
@@ -1,6 +1,6 @@
 :root{
-	--mainColor:#ffa899;
-	--secondaryColor:#382a3f;
+	--mainColor:#eeaaf8;
+	--secondaryColor:#b8a0e3;
 
 	--borderColor:#1d1520;
 
