--- a/green.css
+++ b/green.css
@@ -1,6 +1,6 @@
 :root{
-	--mainColor:#17c4ad;
-	--secondaryColor:#515a48;
+	--mainColor:#6db784;
+	--secondaryColor:#52ab98;
 
 	--borderColor:#161914;
 
