--- a/green.css
+++ b/green.css
@@ -1,6 +1,6 @@
 :root{
-	--mainColor:#6db784;
-	--secondaryColor:#c8d8e4;
+	--mainColor:#c8d8e4;
+	--secondaryColor:#2b6777;
 
 	--borderColor:#161914;
 
