--- a/green.css
+++ b/green.css
@@ -4,8 +4,8 @@
 
 	--borderColor:#161914;
 
-	--mainText:#fff;
-	--secondaryText:#eeeeee;
+	--mainText:#6e6e6e;
+	--secondaryText:#666666;
 
 	--themeDotBorder:#FFF;
 
