--- a/green.css
+++ b/green.css
@@ -4,13 +4,13 @@
 
 	--borderColor:#161914;
 
-	--mainText:#6e6e6e;
+	--mainText:#545454;
 	--secondaryText:#666666;
 
 	--themeDotBorder:#FFF;
 
 	--previewBg:rgb(81, 90, 72, 0.8);
-	--previewShadow: #2a2f25;
+	--previewShadow: #f9e45b;
 
 	--buttonColor: $669966;
 
