--- a/default.css
+++ b/default.css
@@ -222,7 +222,7 @@ h6{font-size: 16px;}
 	background-color: #192734;
 }
 #green-mode{
-	background-color: #78866b;
+	background-color: #6db784;
 }
 #purple-mode{
 	background-color: #7E4C74;
