--- a/blue.css
+++ b/blue.css
@@ -1,12 +1,12 @@
 :root{
-	    --mainColor: #fcde67;
-    --secondaryColor: #17a2b8;
+	--mainColor: #17a2b8;
+    --secondaryColor: #fcde67;
     --borderColor: #164D56;
     --mainText: #030e12; 
     --secondaryText: #030e12;
     --themeDotBorder: #FFF;
     --previewBg: rgb(25, 39, 52, 0.8);
-    --previewShadow: #111921;
+    --previewShadow: #17a2b8;
     --buttonColor: #17a2b8;
 
 }
