--- a/blue.css
+++ b/blue.css
@@ -5,8 +5,8 @@
     --mainText: #030e12; 
     --secondaryText: #030e12;
     --themeDotBorder: #FFF;
-    --previewBg: rgb(25, 39, 52, 0.8);
+    --previewBg: #FFF;
     --previewShadow: #17a2b8;
-    --buttonColor: #17a2b8;
+    --buttonColor: #fcde67;
 
 }
