--- a/default.css
+++ b/default.css
@@ -405,7 +405,7 @@ h6{font-size: 16px;}
 	padding-bottom: 10px;
 	color: #3e3e3e;
 	background-color: var(--buttonColor);
-	border: none;
+	border: 1px solid var(--borderColor);
 }
 
 
