--- a/default.css
+++ b/default.css
@@ -220,7 +220,7 @@ h6{font-size: 16px;}
 	background-color: #eaeaea;
 }
 #blue-mode{
-	background-color: #192734;
+	background-color: #17a2b8;
 }
 #green-mode{
 	background-color: #6db784;
