--- a/default.css
+++ b/default.css
@@ -226,7 +226,7 @@ h6{font-size: 16px;}
 	background-color: #6db784;
 }
 #peach-mode{
-	background-color: #7E4C74;
+	background-color: #ef9273;
 
 }
 #settings-note{
