--- a/peach.css
+++ b/peach.css
@@ -5,7 +5,7 @@
     --mainText: #141850;
     --secondaryText: #303179;
     --themeDotBorder: #FFF;
-    --previewBg: #fae5df;
+    --previewBg: #f6e9d7;
     --previewShadow: #f5cac2;
     --buttonColor: #fae5df;
 }
