--- a/blue.css
+++ b/blue.css
@@ -5,7 +5,7 @@
     --mainText: #030e12; 
     --secondaryText: #030e12;
     --themeDotBorder: #FFF;
-    --previewBg: #c8d8e4;
+    --previewBg: #cff8ff;
     --previewShadow: #17a2b8;
     --buttonColor: #fcde67;
 }
