--- a/default.css
+++ b/default.css
@@ -444,10 +444,17 @@ h6{font-size: 16px;}
 		width: 260px;
 
 	}
+	h1{
+		font-size: 22px;
+
+	}
+	h3{
+		font-size: 18px ;
+	}
 	h4{
 		font-size: 16px;
 	}
 	h5 {
-    font-size: 12px;
+    	font-size: 12px;
 	}
 }
