--- a/default.css
+++ b/default.css
@@ -434,10 +434,9 @@ h6{font-size: 16px;}
 
 @media screen and (max-width: 400px){
 
-	.left-column {
-    grid-area: left-column;
-    padding-top: 20px;
-    padding-bottom: 20px;
+	.right-column {
+    padding-top: 0px;
+    padding-bottom: 50px;
 }
 
 	.greeting-wrapper{
