--- a/default.css
+++ b/default.css
@@ -433,10 +433,13 @@ h6{font-size: 16px;}
 }
 
 @media screen and (max-width: 400px){
+	.main-container{
+		width: 90%;
+	}
 
 	.right-column{
     padding-top: 0px;
-    padding-bottom: 100px;
+    padding-bottom: 750px;
 }
 
 	.greeting-wrapper{
